hard-gists/8406352/run.log
=== Docker Run Log for 8406352 ===
Started at: Mi 29. Okt 17:47:39 CET 2025

[2025-10-29 17:47:40] START: Running container for 8406352
[2025-10-29 17:47:40] SUCCESS: Container 86de248164e2b9afd0e5f215ab84e909b1f24b689ad133b134b26fab4706080d started for 8406352
=== Container logs for 8406352 ===
  File "/snippet.py", line 16
    print "{%s.PropertyChanged} [%s] %s = %s" % (iface, path, name, val)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8406352 ===
[2025-10-29 17:47:42] INFO: Container 86de248164e2b9afd0e5f215ab84e909b1f24b689ad133b134b26fab4706080d has stopped
